Fixed: lg_avatar(removed position, used margin). connection_requests_user: was able to stack the 2 row straight from 2 sides by using align-item: center and set width: 50% for .._avatar and .._marks.

--- a/profile/style.css
+++ b/profile/style.css
@@ -69,16 +69,14 @@ li {
 }
 
 .card_header {
-  position: relative;
   width: 100%;
   height: 80px;
   background-color: #17A2B8;
 }
 
 .lg_avatar {
-  position: absolute;
-  top: 30px;
-  left: 25px;
+  margin-top: 30px;
+  margin-left: 25px;
   width: 80px;
   border: 4px solid white;
   border-radius: 50%;
@@ -158,19 +156,24 @@ li {
 
 .connection_requests_header{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
   padding: 15px;
   color: white;
   background-color: #333333;
+  gap: 5px;
 }
 
 .connection_requests_header p {
-  width: 20px;
+  width: 25px;
+  height: 25px;
   color: black;
   background-color: lightgray;
   border-radius: 50%;
   text-align: center;
 }
+
+
 
 .connection_requests_body {
   border-top: 0px;
@@ -194,9 +197,17 @@ li {
   height: 25px;
 }
 
+.connection_requests_avatar {
+  display: flex;
+  width: 50%;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 5px;
+}
+
 .connection_requests_marks {
   display: flex;
-  width: 55%;
+  width: 50%;
   justify-content: flex-end;
   gap: 5px;
 }
